@@ -1,12 +1,12 @@
 package com.TheCoderKushagra.jwt;
 
+import jakarta.annotation.Nonnull;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -16,17 +16,19 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-    @Autowired
-    private JwtGatewayUtil jwtUtil;
+
+    private final JwtGatewayUtil jwtUtil;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(
+            HttpServletRequest request,
+            @Nonnull HttpServletResponse response,
+            @Nonnull FilterChain filterChain
+    ) throws ServletException, IOException {
 
         // Extract JWT from Authorization header
         final String authHeader = request.getHeader("Authorization");
@@ -44,32 +46,18 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         // If token exists and no authentication is set yet
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-
             // Validate token (NO DB LOOKUP - only signature and expiration check)
             if (jwtUtil.validateToken(jwt)) {
-
-                // Extract roles from JWT
-                String getRole = jwtUtil.extractRoles(jwt);
-                List<String> roles = Collections.singletonList(getRole);
-
-                // Convert roles to GrantedAuthority
-                List<GrantedAuthority> authorities = roles.stream()
-                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                        .collect(Collectors.toList());
-
+                String role = jwtUtil.extractRoles(jwt);// Extract roles from JWT
+                // Convert role to GrantedAuthority (Role already includes "ROLE_" prefix)
+                List<SimpleGrantedAuthority> authorities = (role != null) 
+                        ? List.of(new SimpleGrantedAuthority(role)) 
+                        : Collections.emptyList();
                 // Create authentication token
-                UsernamePasswordAuthenticationToken authToken =
-                        new UsernamePasswordAuthenticationToken(
-                                username,
-                                null,
-                                authorities
-                        );
-
+                var authToken = new UsernamePasswordAuthenticationToken(username, null, authorities);
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
                 // Set authentication in SecurityContext
                 SecurityContextHolder.getContext().setAuthentication(authToken);
-
             }
         }
 
